--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "playground-for-react-18--typescript",
+  "name": "infinite-scroll",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://unuuuuu.github.io/infinite-scroll",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,7 +11,6 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
-    "gh-pages": "^4.0.0",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,8 +18,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -45,11 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "msw": "^0.47.4"
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
